--- a/jupyter/06_Test_driven_development.ipynb
+++ b/jupyter/06_Test_driven_development.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -158,7 +158,8 @@
     "# otherwise the import statements won't work\n",
     "\n",
     "# lets load core into the name space as well\n",
-    "from . import core"
+    "from . import core\n",
+    "from . import color"
    ]
   },
   {
@@ -353,6 +354,197 @@
     "(20,0,0) > (0,19,0) so we sum-up the values in the tuples and feed it into our function, but this time we look for dark spots, that we want to identify as \"peaks\".\n",
     "\n",
     "### What could refactoring look like ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../playground/color.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../playground/color.py\n",
+    "\n",
+    "def find_black(list_of_colors):\n",
+    "    \"\"\"Find peaks\n",
+    "\n",
+    "    Find local minima for a given list of colors. \n",
+    "    Intensities are defined as local minima if the \n",
+    "    intensities of the elements in the list before and after \n",
+    "    are smaller than the peak we want to determine.\n",
+    "\n",
+    "    Args:\n",
+    "        list_of_colors (list of tuples): a list of\n",
+    "            RGB values\n",
+    "\n",
+    "    Returns:\n",
+    "        list of tuples: list of the identified local minima\n",
+    "\n",
+    "    Note:\n",
+    "        This is just a place holder for the TDD part :)\n",
+    "    \"\"\"\n",
+    "    summed_list =[]\n",
+    "    for el in list_of_colors:\n",
+    "        summed_list.append(sum(el))\n",
+    "    min_value = 0\n",
+    "    list_of_min = []\n",
+    "    for pos, element in enumerate(summed_list):\n",
+    "        if pos == 0:\n",
+    "            continue\n",
+    "        if pos == len(summed_list) - 1:\n",
+    "            continue\n",
+    "        if summed_list[pos - 1] > element < summed_list[pos + 1]:\n",
+    "            min_value = element\n",
+    "            list_of_min.append(list_of_colors[pos])\n",
+    "    return list_of_min"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "765\n",
+      "0\n",
+      "60\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0, 0)]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_of_colors = [(255,255,255),(0,0,0),(20,20,20)]\n",
+    "summed_list =[]\n",
+    "for el in list_of_colors:\n",
+    "    summed_list.append(sum(el))\n",
+    "#print(len(summed_list))\n",
+    "min_value = 0\n",
+    "list_of_min = []\n",
+    "for pos, element in enumerate(summed_list):\n",
+    "    print(element)\n",
+    "    if pos == 0:\n",
+    "         continue\n",
+    "    if pos == len(summed_list) - 1:\n",
+    "        continue\n",
+    "    if summed_list[pos - 1] > element < summed_list[pos + 1]:\n",
+    "        min_value = element\n",
+    "        list_of_min.append(list_of_colors[pos])\n",
+    "list_of_min"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[765, 0, 60]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summed_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../tests/test_color.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../tests/test_color.py\n",
+    "import pytest\n",
+    "import sys, os\n",
+    "# This block is not neccessary if you instaled your package\n",
+    "# using e.g. pip install -e\n",
+    "sys.path.append(\n",
+    "    os.path.abspath(\n",
+    "        os.path.join(\n",
+    "            os.path.dirname(__file__), # location of this file\n",
+    "            os.pardir, # and one level up, in linux ../\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "# EOBlock\n",
+    "\n",
+    "import playground\n",
+    "\n",
+    "def test_find_black():\n",
+    "    blacks = playground.color.find_black([(255,255,255),(0,0,0),(20,20,20)])\n",
+    "    assert blacks == [(0,0,0)]  \n",
+    "    \n",
+    "def test_find_black_empty():\n",
+    "    blacks = playground.color.find_black([])\n",
+    "    assert blacks == []  \n",
+    "\n",
+    "def test_find_black_same_vals():\n",
+    "    blacks = playground.color.find_black([(2,0,0),(0,1,0),(0,0,3)])\n",
+    "    assert blacks == [(0,1,0)]  \n",
+    "    \n",
+    "def test_find_black_wrong_input():\n",
+    "    blacks = playground.color.find_black([(2,0,0),(0,1,0),(0,0,3)])\n",
+    "    assert blacks == [(0,1,0)]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform darwin -- Python 3.6.5, pytest-3.5.1, py-1.5.3, pluggy-0.6.0\r\n",
+      "rootdir: /Users/benedict/Desktop/Programmieren/advanced_python_2019, inifile:\r\n",
+      "plugins: remotedata-0.2.1, openfiles-0.3.0, doctestplus-0.1.3, arraydiff-0.2\r\n",
+      "\u001b[1m\r",
+      "collecting 0 items                                                             \u001b[0m\u001b[1m\r",
+      "collecting 3 items                                                             \u001b[0m\u001b[1m\r",
+      "collected 3 items                                                              \u001b[0m\r\n",
+      "\r\n",
+      "tests/test_color.py ...\u001b[36m                                                  [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m\u001b[1m=========================== 3 passed in 0.01 seconds ===========================\u001b[0m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cd ../;pytest tests/test_color.py"
    ]
   },
   {
@@ -723,7 +915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
